--- a/final-pjt-back/requirements.txt
+++ b/final-pjt-back/requirements.txt
@@ -1,23 +1,39 @@
-asgiref==3.7.2
-certifi==2023.7.22
-cffi==1.15.1
-charset-normalizer==3.2.0
-cryptography==41.0.3
-defusedxml==0.7.1
-dj-rest-auth==5.0.2
-Django==4.2.8
-django-allauth==0.59.0
+asgiref==3.8.1
+asttokens==2.4.1
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+colorama==0.4.6
+cryptography==42.0.7
+decorator==5.1.1
+dj-rest-auth==6.0.0
+Django==4.2.13
+django-allauth==0.63.1
 django-cors-headers==4.3.1
-djangorestframework==3.14.0
-idna==3.4
+django-extensions==3.2.3
+django-rest-auth==0.9.5
+djangorestframework==3.15.1
+exceptiongroup==1.2.1
+executing==2.0.1
+idna==3.7
+ipython==8.18.1
+jedi==0.19.1
+matplotlib-inline==0.1.7
 oauthlib==3.2.2
-pycparser==2.21
+parso==0.8.4
+pillow==10.3.0
+prompt-toolkit==3.0.43
+pure-eval==0.2.2
+pycparser==2.22
+Pygments==2.18.0
 PyJWT==2.8.0
-python3-openid==3.2.0
-pytz==2023.3
 requests==2.31.0
-requests-oauthlib==1.3.1
-sqlparse==0.4.4
-typing_extensions==4.7.1
-tzdata==2023.3
-urllib3==2.0.4
+requests-oauthlib==2.0.0
+six==1.16.0
+sqlparse==0.5.0
+stack-data==0.6.3
+traitlets==5.14.3
+typing_extensions==4.11.0
+tzdata==2024.1
+urllib3==2.2.1
+wcwidth==0.2.13
